--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "verum",
-  "version": "0.0.1b",
+  "version": "0.0.2",
   "description": "A module for client / server / p2p encrypted super-secret communication.",
   "main": "index.js",
   "scripts": {
