--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "verum",
-  "version": "1.2.4",
+  "version": "1.3.0",
   "description": "A module for client / server / p2p encrypted super-secret communication.",
   "main": "index.js",
   "scripts": {
-    "test": "node server-test.js --travis-ci && node test.js --travis-ci",
-    "server": "node server-test.js",
-    "client": "node test.js"
+    "test": "node server-test.js --travis-ci && node test.js --travis-ci"
   },
   "repository": {
     "type": "git",
@@ -27,6 +25,7 @@
   },
   "homepage": "https://github.com/freechat-project/Verum-Backend#readme",
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "nodejs-websocket": "^1.7.1",
     "openpgp": "^2.3.5",
     "password-hash": "^1.2.2"
